test properties 수정

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,6 @@ spring.h2.console.enabled=true
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
 
+spring.security.oauth2.client.registration.google.client-id=test
+spring.security.oauth2.client.registration.google.client-secret=test
+spring.security.oauth2.client.registration.google.scope=profile,email
