--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,25 @@ cache:
 
 script: "./gradlew clean build"
 
+
+before_deploy:
+  - zip -r freelec-springboot2 *
+  - mkdir -p deploy
+  - mv freelec-springboot2.zip deploy/freelec-springboot2.zip
+
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travic repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY #Travis repo settings에 설정된 값
+    bucket: freelec-springboot2 #s3 버킷
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private # zip 파일 접근을 private로 \
+    local_dir: deploy # before_deploy에서 생성한 디렉토리
+    wait-until-deployed: true
+
+
 #CI 실행 완료 시 메일로 알람
 notifications:
   email:
