--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,16 @@ deploy:
     acl: private # zip 파일 접근을 private로 \
     local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: freelec-springboot2 #s3 버킷
+    key: freelec-springboot2.zip #빌드 파일을 압축해서 전달
+    bundel_type: zip #압축 확장자
+    application: freelec-springboot2 #웹 콘솔에서 등록한 codedeploy 애플리케이션
+    deployment_group: freelec-springboot2-group #웹 콘솔에서 등록한 codedeploy 배포 그룹
+    region: ap-northeast-2
+    wait-until-deployed: true
 
 
 #CI 실행 완료 시 메일로 알람
